<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".keranjang.KeranjangActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            android:elevation="@dimen/_4"
            android:overScrollMode="always"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_8">

        <TextView
            android:id="@+id/tvTitleDaftarProduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/_8"
            android:paddingBottom="@dimen/_8"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/title_daftar_produk"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDaftarProduk"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toTopOf="@id/clBottom"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clBottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/recyclerView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <TextView
                android:id="@+id/tvTitleTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvTotal"
                android:layout_marginTop="@dimen/_8"
                android:text="@string/title_total"
                android:textColor="@android:color/holo_green_light"/>

            <TextView
                android:id="@+id/tvTotal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitleTotal"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:text="0"
                android:textStyle="bold"
                android:textColor="@android:color/holo_orange_dark"
                android:textSize="@dimen/f_18"/>


            <TextView
                android:id="@+id/tvTitleDiskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toLeftOf="@id/bProses"
                app:layout_constraintLeft_toLeftOf="@id/etDiskon"
                android:layout_marginTop="@dimen/_8"
                android:layout_marginRight="@dimen/_8"
                android:layout_marginEnd="@dimen/_8"
                android:text="@string/title_diskon"
                android:textColor="@android:color/holo_green_light"/>

            <EditText
                android:id="@+id/etDiskon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/tvTitleDiskon"
                app:layout_constraintRight_toLeftOf="@id/tvTitlePersen"
                android:inputType="numberDecimal"
                android:gravity="center"
                android:text="0"
                android:ems="2" />

            <TextView
                android:id="@+id/tvTitlePersen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="@id/etDiskon"
                app:layout_constraintBottom_toBottomOf="@id/etDiskon"
                app:layout_constraintRight_toLeftOf="@id/bProses"
                android:layout_marginRight="@dimen/_8"
                android:layout_marginEnd="@dimen/_8"
                android:layout_marginBottom="@dimen/_2"
                android:text="%"
                android:textColor="@android:color/holo_green_light"/>

            <Button
                android:id="@+id/bProses"
                android:layout_width="@dimen/_128"
                android:layout_height="@dimen/_64"
                android:text="@string/title_proses"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>